#1021 HTTP Request Conversion and Validation Specification -  converted to use of private attributes in the request object (see Person class). Some refactoring too.